# te-reo-hoa-backend

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  main.py  maori_basicwords.csv  pyproject.toml  requirements.txt  te_reo_hoa.db  test.db
app/: ai_integration.py  auth.py  crud.py  database.py  db_initialize.py  main.py  models.py  schemas.py  utils.py
app/router/: login.py  news.py  progress.py  quiz.py  translate.py  tts.py  users.py  words.py
config/: settings.json
data/: te_reo_hoa.db
docs/: Architecture.md  Progress.md
tests/: audio_test.py  aws_test.py  conftest.py  ipa.py  login_test.py  test_WOTD.py  test_ai_function.py  test_api.py  test_api_news.py  test_api_progress.py  test_api_users.py  test_api_words.py  test_audio_synthesis.py  test_endpoint_auth.py  test_ipa_phonetic.py  test_listing_words.py  test_login.py  test_search_words.py  test_user_regsiter.py
