[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C90"]
ignore = []

[project]
name = "te-reo-hoa-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "mtenorio50",email = "270647234@yoobeestudent.ac.nz"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types (==0.7.0)",
    "anyio (==4.9.0)",
    "apscheduler (==3.11.0)",
    "astroid (==3.3.10)",
    "bcrypt (==4.0.1)",
    "beautifulsoup4 (==4.13.4)",
    "black (==25.1.0)",
    "boto3 (==1.38.38)",
    "botocore (==1.38.38)",
    "cachetools (==5.5.2)",
    "certifi (==2025.4.26)",
    "cffi (==1.17.1)",
    "charset-normalizer (==3.4.2)",
    "click (==8.2.1)",
    "colorama (==0.4.6)",
    "cryptography (==45.0.4)",
    "dill (==0.4.0)",
    "dnspython (==2.7.0)",
    "ecdsa (==0.19.1)",
    "email-validator (==2.2.0)",
    "fastapi (==0.115.12)",
    "feedparser (==6.0.11)",
    "google (==3.0.0)",
    "google-ai-generativelanguage (==0.6.15)",
    "google-api-core (==2.25.1)",
    "google-api-python-client (==2.172.0)",
    "google-auth (==2.40.3)",
    "grpcio (==1.73.0)",
    "grpcio-status (==1.71.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httplib2 (==0.22.0)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "iniconfig (==2.1.0)",
    "isort (==6.0.1)",
    "jmespath (==1.0.1)",
    "mccabe (==0.7.0)",
    "mypy-extensions (==1.1.0)",
    "packaging (==25.0)",
    "passlib (==1.7.4)",
    "pathspec (==0.12.1)",
    "platformdirs (==4.3.8)",
    "pluggy (==1.6.0)",
    "proto-plus (==1.26.1)",
    "protobuf (==5.29.5)",
    "pyasn1 (==0.6.1)",
    "pyasn1-modules (==0.4.2)",
    "pycparser (==2.22)",
    "pydantic (==2.11.7)",
    "pydantic-core (==2.33.2)",
    "pygments (==2.19.1)",
    "pylint (==3.3.7)",
    "pyparsing (==3.2.3)",
    "pytest (==8.4.0)",
    "python-dateutil (==2.9.0.post0)",
    "python-dotenv (==1.1.0)",
    "python-jose (==3.5.0)",
    "python-multipart (==0.0.20)",
    "requests (==2.32.4)",
    "ruff (==0.12.0)",
    "s3transfer (==0.13.0)",
    "sgmllib3k (==1.0.0)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "soupsieve (==2.7)",
    "sqlalchemy (==2.0.41)",
    "starlette (==0.46.2)",
    "tomlkit (==0.13.3)",
    "tqdm (==4.67.1)",
    "typing-inspection (==0.4.1)",
    "typing-extensions (==4.14.0)",
    "tzdata (==2025.2)",
    "tzlocal (==5.3.1)",
    "uritemplate (==4.2.0)",
    "urllib3 (==2.4.0)",
    "uvicorn (==0.34.3)"
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.0"
httpx = "^0.28.0"
boto3 = "^1.38.0"
python-dotenv = "^1.0.0"
apscheduler = "^3.10.4"
pydantic = "^2.0.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
pyjwt = "^2.8.0"
aiofiles = "^23.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
